--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MarvelApp</string>
+    <string name="series">Series</string>
+    <string name="comics">Comics</string>
+    <string name="detail">Detail</string>
 </resources>
